--- a/package.json
+++ b/package.json
@@ -20,25 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
-    "@nestjs/swagger": "^8.1.0",
-    "@prisma/client": "^6.1.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "express-session": "^1.18.1",
-    "nanoid": "^5.0.9",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
+    "@nestjs/swagger": "^8.1.0",
     "@nestjs/testing": "^10.0.0",
+    "@prisma/client": "^6.1.0",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.2",
@@ -48,14 +39,24 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "express-session": "^1.18.1",
     "jest": "^29.5.0",
+    "nanoid": "^5.0.9",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "prettier": "^3.0.0",
     "prisma": "^6.1.0",
+    "reflect-metadata": "^0.2.0",
+    "rxjs": "^7.8.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
